[package]
description = "Merge structs into single by values"
exclude = [".github/*", "tests/*"]
keywords = ["struct", "merge", "combine", "macros", "derive"]
name = "merge2"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[workspace.package]
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
categories = ["rust-patterns"]
documentation = "https://docs.rs/merge2/"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoDmitry/merge2"
version = "0.2.0"

[lib]
name = "merge2"
path = "src/lib.rs"

[dependencies]
merge2_derive = { path = "merge2_derive", version = "0.2", optional = true }
num-traits = { version = "0.2.12", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["derive", "std"]
derive = ["merge2_derive"]
num = ["num-traits"]
std = []

[workspace]
members = ["merge2_derive", "merge2_examples"]
