[package]
name = "merge2"
description = "Merge structs into single by values"
documentation = "https://docs.rs/merge2/"
exclude = [".github/*", "tests/*"]
keywords = ["struct", "merge", "combine", "macros", "derive"]
readme = "README.md"
version = "0.3.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.package]
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
categories = ["rust-patterns"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoDmitry/merge2"

[lib]
name = "merge2"
path = "src/lib.rs"

[dependencies]
merge2_derive = { path = "merge2_derive", version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["derive", "std"]
derive = ["merge2_derive"]
num = ["num-traits"]
std = []

[workspace]
members = ["merge2_derive"]
