[package]
description = "Derive macro for Merge2"
name = "merge2_derive"
version = "0.2.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
manyhow = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
