[package]
name = "merge2_derive"
description = "Derive macro for Merge2"
version = "0.2.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
manyhow = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
