[package]
name = "merge2_examples"
description = "Merge2 examples"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
merge2 = { path = ".." }
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[workspace]